[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[project]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering"
]
dependencies = [
  "alembic",
  "attrs",
  "boto3",
  "cacholote",
  "distributed",
  "sqlalchemy>=2.0.9",
  "sqlalchemy-utils",
  "typer"
]
description = "CADS broker service"
dynamic = ["version"]
license = {file = "LICENSE"}
name = "cads-broker"
readme = "README.md"

[project.scripts]
broker = "cads_broker.entry_points:main"

[tool.coverage.run]
branch = true

[tool.mypy]
plugins = "sqlalchemy.ext.mypy.plugin"
strict = true

[tool.pytest.ini_options]
minversion = "6.0"
postgresql_user = "broker"

[tool.ruff]
ignore = [
  # pydocstyle: Missing Docstrings
  "D1"
]
# Same as Black.
indent-width = 4
line-length = 88
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E",
  "W",
  # isort
  "I",
  # pydocstyle
  "D"
]

[tool.ruff.lint.pycodestyle]
max-line-length = 110

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.setuptools]
packages = ["cads_broker"]

[tool.setuptools_scm]
write_to = "cads_broker/version.py"
write_to_template = '''
# Do not change! Do not track in version control!
__version__ = "{version}"
'''
