[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64", "setuptools_scm>=8"]

[dependency-groups]
dev = [
  "pre-commit>=4.2.0",
  "pytest>=8.3.5",
  "pytest-mock>=3.14.0",
  "pytest-postgresql>=7.0.1"
]

[project]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering"
]
dependencies = [
  "alembic",
  "attrs",
  "boto3",
  "cachetools>=5.5.2",
  "cacholote",
  "distributed",
  "prettytable>=3.16.0",
  "psycopg2>=2.9.10",
  "psycopg[binary]>=3.2.6",
  "sqlalchemy>=2.0.9",
  "sqlalchemy-utils",
  "typer"
]
description = "CADS broker service"
dynamic = ["version"]
license = {file = "LICENSE"}
name = "cads-broker"
readme = "README.md"

[project.scripts]
broker = "cads_broker.entry_points:main"
broker-alembic-cli = "cads_broker.alembic_cli:main"

[tool.coverage.run]
branch = true

[tool.mypy]
plugins = "sqlalchemy.ext.mypy.plugin"
strict = true

[tool.pytest.ini_options]
minversion = "6.0"
postgresql_user = "broker"

[tool.ruff]
# Same as Black.
indent-width = 4
line-length = 88

[tool.ruff.lint]
ignore = [
  # pydocstyle: Missing Docstrings
  "D1"
]
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E",
  "W",
  # isort
  "I",
  # pydocstyle
  "D"
]

[tool.ruff.lint.pycodestyle]
max-line-length = 110

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.setuptools]
packages = ["cads_broker"]

[tool.setuptools_scm]
write_to = "cads_broker/version.py"
write_to_template = '''
# Do not change! Do not track in version control!
__version__ = "{version}"
'''
